#36 Fixed the stupid gap

--- a/style.css
+++ b/style.css
@@ -300,7 +300,7 @@ ul {
     align-items: center;
     background-color: #efefef;
     position: sticky;
-    top: 0;
+    top: -1px;
     z-index: 2000;
 }
 
